tests/nightly/function/compile_fail/undefined_precondition.stderr
error[E0061]: this function takes 0 arguments but 1 argument was supplied
 --> $DIR/undefined_precondition.rs:8:5
  |
3 | fn foo() {}
  | -------- defined here
...
7 |     #[assert_pre("must be bar", reason = "is bar")]
  |     ----------------------------------------------- supplied 1 argument
8 |     foo()
  |     ^^^ expected 0 arguments
